<resources>
    <string name="app_name">TODistry</string>
    <string name="sharing_love_and_creating_family_history_today">“Sharing Love and Creating Family History Today”</string>
    <string name="select_language">Select language</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="submit">Submit</string>
    <string name="connect_with_relatives">Connect With Relatives</string>
    <string name="build_your_family_tree">Build your family tree</string>
    <string name="create_memories">Create Memories</string>
    <string name="create_and_record_your_family_history_for_generations_to_come">Create and record your family history for \ngenerations to come</string>
    <string name="capture_precious_moments">Capture Precious Moments</string>
    <string name="post_video_chat_to_your_family_members">Post/Video Chat to your family members</string>
    <string name="sign_in">Sign in</string>
    <string name="get_started">Get Started</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="signup">Signup</string>
    <string name="email_compulsary">Email*</string>
    <string name="password_compulsary">Password*</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="valid_email_address_required">Valid Email Address Required</string>
    <string name="share_love_and_create_family_history_today">Share Love and Create Family History Today</string>
    <string name="create_an_administrator_profile">Create an Administrator Profile</string>
    <string name="admin_text_details">Only as an administrator can you add or remove names. However, a family can edit their profile, which gives them the limited possibility of adding children and spouse.</string>
    <string name="admin_text_details2">As an administrator, you have the possibility to assign the tree to a legacy (beneficiary) in the event of his death.</string>
    <string name="note_required_field">Note: *=Required</string>
    <string name="first_name">First Name*</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="enter_middle_name">Enter Midlle Name</string>
    <string name="last_name">Last Name*</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="gender">Gender*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="rather_not_say">Rather not say</string>
    <string name="select_gender">Select Gender</string>
    <string name="birth_date_compulsary">Birth Date*</string>
    <string name="year">Year</string>
    <string name="mobile_number_compulsary">Mobile Number*</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="password_info">Password info</string>
    <string name="family_tree_name">Family Tree Name*</string>
    <string name="enter_family_tree_name">Enter Family Tree Name</string>
    <string name="legacy_name">Legacy Name</string>
    <string name="enter_legacy_name">Enter Legacy Name</string>
    <string name="legacy_email_address">Legacy Email Address</string>
    <string name="enter_legacy_email_address">Enter Legacy Email Address</string>
    <string name="this_email_already_exists">This Email Already Exists</string>
    <string name="minimum_8_characters_required">Minimum 8 Characters Required</string>
    <string name="select_birth_date">Select Birth Date</string>
    <string name="select_birth_date_day">Select Birth Date Day</string>
    <string name="select_birth_date_month">Select Birth Date Month</string>
    <string name="enter_birth_date_year">Enter Birth Date Year</string>
    <string name="four_digits_required">4 Digits Required</string>
    <string name="password_must_match_criteria">Password must match criteria</string>
    <string name="minimum_8_characters">• Minimum 8 characters\n</string>
    <string name="at_least_one_number">• At least one number\n</string>
    <string name="at_least_one_special_character">• At least one special character ($, %, @, etc.)\n</string>
    <string name="at_least_one_uppercase_letter">• At least one uppercase letter\n</string>
    <string-array name="birth_date_day">
        <item>Day</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="birth_date_month">
        <item>Month</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="contact_information">Contact Information</string>
    <string name="website">Website</string>
    <string name="enter_website">Enter Website</string>
    <string name="blog">Blog</string>
    <string name="enter_blog">Enter Blog</string>
    <string name="home_phone_number">Home Phone Number</string>
    <string name="enter_home_phone_number">Enter Home Phone Number</string>
    <string name="work_phone_number">Work Phone Number</string>
    <string name="enter_work_phone_number">Enter Work Phone Number</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="biography">Biography</string>
    <string name="birth_place">Birth place</string>
    <string name="enter_birth_place">Enter Birth Place</string>
    <string name="profession">Profession</string>
    <string name="enter_profession">Enter Profession</string>
    <string name="company">Company</string>
    <string name="enter_company">Enter Company</string>
    <string name="interests">Interests</string>
    <string name="enter_interests">Enter Interests</string>
    <string name="activities">Activities</string>
    <string name="enter_activities">Enter Activities</string>
    <string name="bio_notes">Bio notes</string>
    <string name="enter_bio_notes">Enter Bio notes</string>
    <string name="submit_an_administrator_profile">Submit an Administrator Profile</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="terms_conditions">Terms Conditions</string>
    <string name="terms_conditions_message">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.&#10;&#10;The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English.&#10;&#10;Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy</string>
    <string name="i_accept_termsconditions_and_privacy_policy"><![CDATA[I accept Terms & Conditions and Privacy Policy]]></string>
    <string name="i_accept">I Accept</string>
    <string name="create_tree_text">Creating your family tree is just minutes away.All you need to do is complete and submit the administrator profile that follows.</string>
    <string name="build_nfamily_ntree">Build \nFamily \nTree</string>
    <string name="tap_nhere">Tap \nhere</string>
    <string name="existing_tree_text">Find out if you’re already on an existing Tree by simply typing in your name or your parents’ name. Once you recognize your family member from the list of search results you must contact them for the tree’s access code to join.</string>
    <string name="find_nexisting_n_tree"> Find \nExisting \n Tree</string>
    <string name="home_menu">Home</string>
    <string name="profile_menu">Profile</string>
    <string name="tree_menu">Tree</string>
    <string name="support_menu">Support</string>
    <string name="settings_menu">Settings</string>
    <string name="logout_menu">Logout</string>
    <string name="please_wait">Please wait…</string>
    <string name="alert">Alert</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="go_to_publish_your_tree">Go to Publish Your Tree</string>
    <string name="create_family_member_s_profile">Create Family Member’s profile</string>
    <string name="please_select_member_type">Please Select Member Type</string>
    <string name="suffix_compulsary">Suffix*</string>
    <string name="please_select_suffix">Please Select Suffix</string>
    <string name="please_select_gender">Please Select Gender</string>
    <string name="relationship_with_admin">Relationship With Admin*</string>
    <string name="please_select_relationship_with_admin">Please Select Relationship With Admin</string>
    <string name="birth_date">Birth date</string>
    <string name="person_status">Person Status</string>
    <string name="alive">Alive</string>
    <string name="deceased">Deceased</string>
    <string name="please_select_person_status">Please Select Person Status</string>
    <string name="email_optional">Email</string>
    <string name="mobile">Mobile</string>
    <string name="street_number">Street Number</string>
    <string name="enter_street_number">Enter Street Number</string>
    <string name="apt_unit_number">APT./UNIT Number</string>
    <string name="enter_apt_unit_number">Enter APT./UNIT Number</string>
    <string name="city">City</string>
    <string name="enter_city">Enter City</string>
    <string name="state">State</string>
    <string name="enter_state">Enter State</string>
    <string name="zip_code">Zip Code</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="birth_first_name">Birth First Name</string>
    <string name="enter_birth_first_name">Enter Birth First Name</string>
    <string name="birth_last_name">Birth Last Name</string>
    <string name="enter_birth_last_name">Enter Birth Last Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="enter_nick_name">Enter Nick Name</string>
    <string name="select_member_type_label">Select Member Type*</string>
    <string name="parents">Parents</string>
    <string name="siblings">Siblings</string>
    <string name="child">Child</string>
    <string name="spouse">Spouse</string>
    <string name="select_parents_type">Select Parents Type*</string>
    <string name="adoptive_parent">Adoptive Parent</string>
    <string name="biological">Biological</string>
    <string name="foster_parent">Foster Parent</string>
    <string name="god_parent">God Parent</string>
    <string name="step_parent">Step Parent</string>
    <string name="seconds_remaining">seconds remaining</string>
    <string name="member_deleted_successfully">Member Deleted Successfully</string>
    <string name="undo">Undo</string>
</resources>