<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/txtSelectLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_font_bold_regular"
        android:padding="@dimen/_4sdp"
        android:text="@string/select_language"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="@dimen/_14ssp" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="1">

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:checked="true"
            android:fontFamily="@font/dmsans_font_bold_regular"
            android:text="@string/english"
            android:textFontWeight="400"
            android:textSize="@dimen/_12ssp"
            android:theme="@style/MyRadioButton" />

        <RadioButton
            android:id="@+id/rbSpanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/dmsans_font_bold_regular"
            android:text="@string/spanish"
            android:textFontWeight="400"
            android:textSize="@dimen/_12ssp"
            android:theme="@style/MyRadioButton" />
    </RadioGroup>
</LinearLayout>