<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_15sdp"
    android:layout_marginEnd="@dimen/_15sdp"
    app:cardCornerRadius="@dimen/_12sdp"
    app:cardElevation="@dimen/_5sdp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/dmsans_font_medium_regular"
            android:text="@string/terms_conditions"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/txtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/dmsans_font_regular"
            android:text="@string/terms_conditions_message"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="@dimen/_12ssp" />

        <CheckBox
            android:id="@+id/cbTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:buttonTint="@color/colorPrimary"
            android:fontFamily="@font/dmsans_font_bold_regular"
            android:gravity="start"
            android:text="@string/i_accept_termsconditions_and_privacy_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <RelativeLayout
            android:id="@+id/rlAccept"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/button_primary_background"
            android:gravity="center"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/official_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imgLogo"
                android:fontFamily="@font/dmsans_font_bold_regular"
                android:text="@string/i_accept"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="@dimen/_13ssp" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>